# basil-engine

./: .clang-tidy  .gitignore  .gitmodules  BINDLESS_TEXTURES_DETAILED_EXPLANATION.md  Behavior.scene  CLAUDE.md  CMakeSettings.json  CMakelists.txt  CURRENT_WORKFLOW_AND_FRAMEWORK_USAGE.md  DEVELOPER_GUIDE.md  FRAMEWORK_USAGE_GUIDE.md  GPU_INSTANCING_DETAILED_EXPLANATION.md  GRAPHICS_ARCHITECTURE.md  MATERIAL_INSTANCE_IMPLEMENTATION_SUMMARY.md  MATERIAL_PIPELINE_INTEGRATION_IMPLEMENTATION.md  MATERIAL_PROPERTY_SERIALIZATION_IMPLEMENTATION.md  MULTIPASS_EXAMPLES.md  MULTIPASS_RENDERING.md  MULTI_PASS_ARCHITECTURE_DECISION.md  PBR_IMPLEMENTATION_GUIDE.md  PIPELINE_ARCHITECTURE_GUIDE.md  POINT_SHADOWS_IMPLEMENTATION.md  PREFAB_SYNC_IMPLEMENTATION.md  PREFAB_SYSTEM_DESIGN.md  Prefab.txt  README.md  RENDER_COMMAND_SORTING.md  SCENE_GRAPH_USAGE.md  Sample.scene  TECHNICAL_ANALYSIS_REPORT.md  TEXTURE_TYPES_AND_FLAGS.md  UNITY_COMPARISON.md  editor output.rdc  graphics test output.rdc  logs.txt
.claude/: settings.local.json
.github/workflows/: jenkins_release.yml  robot_pr.yml
AudioTest/: .basil  Test.scene
AudioTest/.imports/: .assetlist
Batch Scripts/: RunCMAKEGenerator.bat  ascii.txt
EditorTestV2/: .basil
EditorTestV2/.imports/: .assetlist
EditorTestV2/managed/: GameAssembly.csproj
M2/: .basil
M2/.imports/: .assetlist
M2/managed/: GameAssembly.csproj
M2Demo/: .basil
M2New/: .basil
M2New/.imports/: .assetlist
M2New/managed/: GameAssembly.csproj
M2Scene/: .basil
M2Scene/.imports/: .assetlist
M2Scene/managed/: GameAssembly.csproj
M2V2/: .basil
TestingV3/: .basil
TestingV3/managed/: GameAssembly.csproj
app/: CMakelists.txt
app/managed/: CMakeLists.txt
app/src/: dummy.cpp  main.cpp
cmake/: custom_tools.cmake  import-dependencies.cmake  import-dependencies.cmake.orig  utilities.cmake
docs/: BUILD_FIXES_2026_01_23.md  CLI_BUILD_TOOL.md  EDITOR_INTEGRATION_ROADMAP.md  MATERIAL_PIPELINE.md  RENDER_SYSTEM_ARCHITECTURE.md  RENDER_SYSTEM_REFACTOR_EXECUTION_PLAN.md  SKELETAL_ANIMATION_FIXES.md  SKELETAL_ANIMATION_IMPLEMENTATION.md  SKELETAL_ANIMATION_TODO.md  STANDALONE_USAGE_EXAMPLE.md  TextComponent.md  TextMeshComponent.md  billboard_modes.md
docs/docfx/: docfx.json  toc.yml
editor/: .projects  .projects.orig  CMakelists.txt
editor/include/: Editor.hpp
editor/schema/: schema.xml  test.xml
editor/src/: Editor.cpp
editortest/: .basil  assets.desc
editortest/.imports/: .assetlist
editortest/Audio/: .basil
editortest/assets/: 0.scene  Test2.scene  TestFile.scene
engine/: CMakelists.txt  CMakelists.txt.orig  RENDER_SYSTEM_ARCHITECTURE.md
engine/CPPGlue/: BasilEngine_Components_Animation_GLUE_GEN.cpp  BasilEngine_Components_Animation_GLUE_GEN.hpp  BasilEngine_Components_Audio_GLUE_GEN.cpp  BasilEngine_Components_Audio_GLUE_GEN.hpp  BasilEngine_Components_Button_GLUE_GEN.cpp  BasilEngine_Components_Button_GLUE_GEN.hpp  BasilEngine_Components_Camera_GLUE_GEN.cpp  BasilEngine_Components_Camera_GLUE_GEN.hpp  BasilEngine_Components_Component_GLUE_GEN.cpp  BasilEngine_Components_Component_GLUE_GEN.hpp  BasilEngine_Components_HudComponent_GLUE_GEN.cpp  BasilEngine_Components_HudComponent_GLUE_GEN.hpp  BasilEngine_Components_Light_GLUE_GEN.cpp  BasilEngine_Components_Light_GLUE_GEN.hpp  BasilEngine_Components_MeshRenderer_GLUE_GEN.cpp  BasilEngine_Components_MeshRenderer_GLUE_GEN.hpp  BasilEngine_Components_Particle_GLUE_GEN.cpp  BasilEngine_Components_Particle_GLUE_GEN.hpp  BasilEngine_Components_Rigidbody_GLUE_GEN.cpp  BasilEngine_Components_Rigidbody_GLUE_GEN.hpp  BasilEngine_Components_Transform_GLUE_GEN.cpp  BasilEngine_Components_Transform_GLUE_GEN.hpp  BasilEngine_Components_Video_GLUE_GEN.cpp  BasilEngine_Components_Video_GLUE_GEN.hpp  BasilEngine_Components_WorldUI_GLUE_GEN.cpp  BasilEngine_Components_WorldUI_GLUE_GEN.hpp  BasilEngine_Debug_Logger_GLUE_GEN.cpp  BasilEngine_Debug_Logger_GLUE_GEN.hpp  BasilEngine_Engine_GLUE_GEN.cpp  BasilEngine_Engine_GLUE_GEN.hpp  BasilEngine_GameObject_GLUE_GEN.cpp  BasilEngine_GameObject_GLUE_GEN.hpp  BasilEngine_Input_GLUE_GEN.cpp  BasilEngine_Input_GLUE_GEN.hpp  BasilEngine_Physics_GLUE_GEN.cpp  BasilEngine_Physics_GLUE_GEN.hpp  BasilEngine_Ray_GLUE_GEN.cpp  BasilEngine_Ray_GLUE_GEN.hpp  BasilEngine_SceneManagement_Scene_GLUE_GEN.cpp  BasilEngine_SceneManagement_Scene_GLUE_GEN.hpp  (+22 more)
engine/include/: Engine.hpp  (+3 more)
engine/managed/: CMakeLists.txt
engine/managed/BasilEngine/: .gitignore  BasilEngine.csproj  BasilEngine.sln  Class1.cs  Engine.cs  GameObject.cs  Input.cs  NativeObject.cs  Physics.cs  Ray.cs  RaycastHit.cs  Screen.cs  Time.cs
engine/managed/BasilEngine/Components/: Animation.cs  Audio.cs  Behavior.cs  Button.cs  Camera.cs  Component.cs  HudComponent.cs  Light.cs  MeshRenderer.cs  Particle.cs  Rigidbody.cs  Transform.cs  Video.cs  WorldUI.cs
engine/managed/BasilEngine/Debug/: Logger.cs
engine/managed/BasilEngine/Mathematics/: Math.cs  Vector2.cs  Vector3.cs  Vector3Int.cs  Vector4.cs
engine/managed/BasilEngine/Rendering/: Color.cs  Color32.cs
engine/managed/BasilEngine/SceneManagement/: Scene.cs
engine/managed/CPPGlue/: BINDING_FILE_TYPES.def
engine/managed/EngineAPI/: Class1.cs  Component.cs  GameObject.cs  NativeObject.cs
engine/managed/EngineAPI/lib/: Engine.Bindings.deps.json
gameplay/: .basil
installer/: InstallScript.iss
jenkins/: jenkin_build_pipeline.groovy  jenkin_deploy_pipeline.groovy
lib/: CMakelists.txt  CMakelists.txt.orig
lib/JobSystem/: CMakeLists.txt
lib/JobSystem/include/: jobsystem.hpp
scripts/: GameAssembly.csproj  Hello.cs  UserTest.cs
src/: CMakelists.txt
test/: CMakeLists.txt
test/dummy/: CMakeLists.txt  dummy.cpp
test/examples/engine/prefab_system/: CMakeLists.txt  QUICK_START.md  README.md  main.cpp  minimal_test.cpp  sample_player.prefab
test/unit/lib/resourcelib/: CMakeLists.txt  main.cpp  reflection_test.cpp  serialization_test.cpp  utility.hpp
testingGraphicsOnEdit/: .basil
tools/: CMakelists.txt
unity/: .basil
unity2/: .basil
unity_levels/: .basil
unity_levelsv2/: .basil  build.yaml  scene_manifest.order
(+3915 files in other folders)
