set(ASM_NAME BasilEngine)

set(CSPROJPath ${ASM_NAME}/${ASM_NAME}.csproj)

set(OUTPUT_DIR ../CPPGlue)


option(GEN_CS "Use Csharp glue generator" ON)


# Engine API Side
file(GLOB_RECURSE MANAGED_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_LIST_DIR}/*.cs
)

set(DOTNET_BUILDCONFIG Debug)

execute_process(
    COMMAND ${TOOL_DOTNET} msbuild ${CSPROJPath}
    -nologo -getProperty:TargetPath
    -p:Configuration=${DOTNET_BUILDCONFIG}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE DOTNET_OUTPUT

    OUTPUT_STRIP_TRAILING_WHITESPACE
)

message(STATUS "Managed output: ${DOTNET_OUTPUT}")

if (TRUE)
add_custom_command(
  OUTPUT "${DOTNET_OUTPUT}.timestamp"
  COMMAND ${TOOL_DOTNET} build ${CSPROJPath} -c ${DOTNET_BUILDCONFIG}
  COMMAND ${TOOL_CSBRIDGE} ${DOTNET_OUTPUT} -o ${OUTPUT_DIR}
  COMMAND ${CMAKE_COMMAND} -E touch ${DOTNET_OUTPUT}.timestamp
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  DEPENDS ${CSPROJPath} ${MANAGED_FILES}
  COMMENT "Build EngineAPI.dll and run CSBridge"
  VERBATIM USES_TERMINAL
)

add_custom_target(EngineAPI_Managed ALL
  DEPENDS "${DOTNET_OUTPUT}.timestamp"
  SOURCES "${CSPROJPath}"
)

# Building managed code
execute_process(
    COMMAND ${TOOL_DOTNET} build ${CSPROJPath} -c ${DOTNET_BUILDCONFIG}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE DOTNET_BUILD_OUTPUT
    ERROR_VARIABLE DOTNET_BUILD_ERROR
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
message(STATUS  "${TOOL_CSBRIDGE} ${DOTNET_OUTPUT} -v -o ${OUTPUT_DIR}")
# Call CSBridge
if (TRUE)
message(STATUS "Building CS CODE")
execute_process(
    COMMAND "${TOOL_CSBRIDGE}" "${DOTNET_OUTPUT}" -v -o ${OUTPUT_DIR}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    OUTPUT_VARIABLE CSBRIDGE_OUTPUT
    ERROR_VARIABLE CSBRIDGE_ERROR
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
endif()
endif()
message(STATUS "${CSBRIDGE_OUTPUT}")